First version of the insert logic working
We can place an order and insert the customer and the order_header information

--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -19,10 +19,12 @@
                 <input type="text" name="address" id="address" placeholder="Address..."> 
                 <div id="div_address_info">
                     <input type="text" name="city" id="city" placeholder="City...">
+                    <input type="text" name="province" id="province" placeholder="Province...">
                     <input type="text" name="country" id="country" placeholder="Country...">
                     <input type="text" name="zip_code" id="zip_code" placeholder="ZIP Code...">
-                    <input type="text" name="dob" id="dob" placeholder="Birthdate..." onfocus="(this.type='date')">
+                    
                 </div>                               
+                <input type="text" name="dob" id="dob" placeholder="Birthdate..." onfocus="(this.type='date')">
                 <input type="text" name="email" id="email" placeholder="Email...">
                 <input type="text" name="phone" id="phone" placeholder="Phone...">
             </div>
@@ -31,8 +33,7 @@
                     <option value="baby_yoda">Baby Yoda</option>
                     <option value="monopoly">Monopoly</option>
                     <option value="nerf">Nerf</option>                    
-                  </select>
-                <input type="text" name="identification" id="identification" placeholder="Identification...">
+                  </select>                
                 <input type="text" name="quantity" id="quantity" placeholder="Quantity...">
                 <input type="submit" name="place_order" value="Place order" class="form_submit">   
             </div>                        
