First version of the update logic working

--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insert</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/insert.css">
+    <link rel="stylesheet" href="../css/insert_update.css">
 </head>
 <body>
     <%- include('./partials/header.ejs') %>
@@ -21,8 +21,7 @@
                     <input type="text" name="city" id="city" placeholder="City...">
                     <input type="text" name="province" id="province" placeholder="Province...">
                     <input type="text" name="country" id="country" placeholder="Country...">
-                    <input type="text" name="zip_code" id="zip_code" placeholder="ZIP Code...">
-                    
+                    <input type="text" name="zip_code" id="zip_code" placeholder="ZIP Code...">                    
                 </div>                               
                 <input type="text" name="dob" id="dob" placeholder="Birthdate..." onfocus="(this.type='date')">
                 <input type="text" name="email" id="email" placeholder="Email...">
