Modification in tables due to a change in orders collections

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,7 @@
             </tr>
             <tr><td>Inventory</td></tr>
             <tr><td>Product</td></tr>
-            <tr><td>Order header</td></tr>
-            <tr><td>Order items</td></tr>
+            <tr><td>Order</td></tr>
             <tr><td>Employees</td></tr>
             <tr><td>Customer</td></tr>
         </table>
