Responsive added to home, insert and update page

--- a/public/css/update.css
+++ b/public/css/update.css
@@ -32,3 +32,9 @@ span {
 .error_span {
 	color: darkred;
 }
+
+@media (max-width: 900px) {
+	.form_inputs input[type="submit"] {
+		width: 35%;
+	}
+}
