--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,9 @@ tr:nth-of-type(even) {
 tr:nth-of-type(odd) {
 	background-color: white;
 }
+
+@media (max-width: 1000px) {
+	main h1 {
+		font-size: 2.6em;
+	}
+}
