Change font family button added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,8 +79,37 @@ tr:nth-of-type(odd) {
 	background-color: white;
 }
 
+header button {
+	padding: 10px;
+	margin-right: 25px;
+	background-color: #0d4b15cd;
+	border: 1px solid rgb(15, 58, 15);
+	color: white;
+	border-radius: 7px;
+	letter-spacing: 1px;
+}
+
+header button {
+	cursor: pointer;
+	background-color: #166e22cd;
+	border: 1px solid #105319cd;
+	transition: 0.5s;
+}
+
 @media (max-width: 1000px) {
 	main h1 {
 		font-size: 2.6em;
+	}
+}
+
+@media (max-width: 850px) {
+	header {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	#logoheader {
+		width: 100%;
+		margin: 0px;
+		text-align: center;
 	}
 }
