--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,6 +21,6 @@
             <tr><td>Customer</td></tr>
         </table>
     </main>
-    
+    <script src="../js/changeFontFamilyWebsite.js"></script>
 </body>
 </html>
