--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -11,5 +11,6 @@
     <main>
         <h1>Helloo reports!!</h1>
     </main>
+    <script src="../js/changeFontFamilyWebsite.js"></script>
 </body>
 </html>
