--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -39,5 +39,6 @@
             </div>                        
         </form>
     </main>
+    <script src="../js/changeFontFamilyWebsite.js"></script>
 </body>
 </html>
