--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
             <li><a href="/insert">Insert</a></li>
             <li><a href="/update">Update</a></li>
             <li><a href="/reports">Reports</a></li>                
-        </ul>
+        </ul>                
     </nav>
+    <button id="changeFontFamily">Change Font Size</button>
 </header>
