--- a/views/update.ejs
+++ b/views/update.ejs
@@ -49,5 +49,6 @@
             <% } %>              
         </form>
     </main>
+    <script src="../js/changeFontFamilyWebsite.js"></script>
 </body>
 </html>
