--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <%- include('./partials/header.ejs') %>
-    <main>
-        <h1>Helloo reports!!</h1>
-    </main>
+    <div class="wrapper">
+        <%- include('./partials/header.ejs') %>
+        <main>
+            <h1>Helloo reports!!</h1>
+        </main>
+        <%- include('./partials/footer.ejs') %>
+    </div>
     <script src="../js/changeFontFamilyWebsite.js"></script>
 </body>
 </html>
