--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,20 @@ body {
 	background-color: #fcfdf3a0;
 }
 
+/*Code that allow us to set the footer at the bottom of the page*/
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+header,
+main {
+	flex: 1;
+}
+footer {
+	margin-top: auto;
+}
+
 /*Header*/
 header {
 	display: flex;
@@ -82,18 +96,41 @@ tr:nth-of-type(odd) {
 header button {
 	padding: 10px;
 	margin-right: 25px;
-	background-color: #0d4b15cd;
-	border: 1px solid rgb(15, 58, 15);
+	background-color: #166e22cd;
+	border: 1px solid #105319cd;
 	color: white;
 	border-radius: 7px;
 	letter-spacing: 1px;
 }
 
-header button {
+header button:hover {
 	cursor: pointer;
-	background-color: #166e22cd;
-	border: 1px solid #105319cd;
-	transition: 0.5s;
+	background-color: #0d4b15cd;
+	border: 1px solid rgb(15, 58, 15);
+	transition: 0.3s;
+}
+
+footer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #0d4b15cd;
+	background-color: #dbdbdbcd;
+	margin-top: 150px;
+	height: 130px;
+	text-align: center;
+}
+footer h4 {
+	font-style: italic;
+	margin: 0px;
+	margin-bottom: 10px;
+	color: rgb(90, 90, 90);
+}
+footer p {
+	margin: 0px;
+	margin-bottom: 5px;
+	font-size: 90%;
+	color: rgb(109, 109, 109);
 }
 
 @media (max-width: 1000px) {
