--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -8,37 +8,40 @@
     <link rel="stylesheet" href="../css/insert_update.css">
 </head>
 <body>
-    <%- include('./partials/header.ejs') %>
-    <main>
-        <form action="/insert" method="post" id="insert_form">
-            <div id="div_client_information" class="form_inputs">
-                <input type="text" name="identification" id="identification" placeholder="Identification...">
-                <input type="text" name="first_name" id="first_name" placeholder="First name...">
-                <input type="text" name="middle_name" id="middle_name" placeholder="Middle name...">
-                <input type="text" name="last_name" id="last_name" placeholder="Last name...">
-                <input type="text" name="address" id="address" placeholder="Address..."> 
-                <div id="div_address_info">
-                    <input type="text" name="city" id="city" placeholder="City...">
-                    <input type="text" name="province" id="province" placeholder="Province...">
-                    <input type="text" name="country" id="country" placeholder="Country...">
-                    <input type="text" name="zip_code" id="zip_code" placeholder="ZIP Code...">                    
-                </div>                               
-                <input type="text" name="dob" id="dob" placeholder="Birthdate..." onfocus="(this.type='date')">
-                <input type="text" name="email" id="email" placeholder="Email...">
-                <input type="text" name="phone" id="phone" placeholder="Phone...">
-            </div>
-            <div id="div_product_information" class="form_inputs">                     
-                <select id="product" name="product" form="insert_form">                        
-                    <% for (let i = 0; i < product.length; i++) { %>
-                        <option value="<%= product[i].id %>" name="product"><%= product[i].name %></option>       
-                    <% } %>          
-                </select> 
-                                 
-                <input type="text" name="quantity" id="quantity" placeholder="Quantity...">
-                <input type="submit" name="place_order" value="Place order" class="form_submit">   
-            </div>                        
-        </form>
-    </main>
+    <div class="wrapper">
+        <%- include('./partials/header.ejs') %>
+        <main>
+            <form action="/insert" method="post" id="insert_form">
+                <div id="div_client_information" class="form_inputs">
+                    <input type="text" name="identification" id="identification" placeholder="Identification...">
+                    <input type="text" name="first_name" id="first_name" placeholder="First name...">
+                    <input type="text" name="middle_name" id="middle_name" placeholder="Middle name...">
+                    <input type="text" name="last_name" id="last_name" placeholder="Last name...">
+                    <input type="text" name="address" id="address" placeholder="Address..."> 
+                    <div id="div_address_info">
+                        <input type="text" name="city" id="city" placeholder="City...">
+                        <input type="text" name="province" id="province" placeholder="Province...">
+                        <input type="text" name="country" id="country" placeholder="Country...">
+                        <input type="text" name="zip_code" id="zip_code" placeholder="ZIP Code...">                    
+                    </div>                               
+                    <input type="text" name="dob" id="dob" placeholder="Birthdate..." onfocus="(this.type='date')">
+                    <input type="text" name="email" id="email" placeholder="Email...">
+                    <input type="text" name="phone" id="phone" placeholder="Phone...">
+                </div>
+                <div id="div_product_information" class="form_inputs">                     
+                    <select id="product" name="product" form="insert_form">                        
+                        <% for (let i = 0; i < product.length; i++) { %>
+                            <option value="<%= product[i].id %>" name="product"><%= product[i].name %></option>       
+                        <% } %>          
+                    </select> 
+                                    
+                    <input type="text" name="quantity" id="quantity" placeholder="Quantity...">
+                    <input type="submit" name="place_order" value="Place order" class="form_submit">   
+                </div>                        
+            </form>
+        </main>
+        <%- include('./partials/footer.ejs') %>
+    </div>
     <script src="../js/changeFontFamilyWebsite.js"></script>
 </body>
 </html>
