finalized report pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,12 @@
 <header>
-    <a id="logoheader" href="/home"><h1>Tech Giants</h1></a>
-    <nav>
-        <ul>
-            <li><a href="/insert">Insert</a></li>
-            <li><a href="/update">Update</a></li>
-            <li><a href="/reports">Reports</a></li>                
-        </ul>                
-    </nav>
-    <button id="changeFontFamily">Change Font Size</button>
+  <a id="logoheader" href="/home"><h1>Tech Giants</h1></a>
+  <nav>
+    <ul>
+      <li><a href="/insert">Insert</a></li>
+      <li><a href="/update">Update</a></li>
+      <li><a href="/reports">Customer Invoice Report </a></li>
+      <li><a href="/monthly_report">Monthly Orders Report</a></li>
+    </ul>
+  </nav>
+  <button id="changeFontFamily">Change Font Size</button>
 </header>
