--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,7 @@ header {
   align-items: center;
   background-color: #0d4b15cd;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1%;
   /*Fixed the header*/
   position: fixed;
   top: 0;
@@ -54,9 +55,9 @@ nav ul {
 
 /*Main*/
 main {
-  margin-top: 140px;
+  margin-top: 100px;
   display: flex;
-  gap: 35px;
+  /* gap: 35px; */
   flex-direction: column;
   align-items: center;
 }
@@ -131,6 +132,13 @@ footer p {
   margin-bottom: 5px;
   font-size: 90%;
   color: rgb(109, 109, 109);
+}
+
+/* ------------reports */
+.report-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 @media (max-width: 1000px) {
