--- a/public/css/insert_update.css
+++ b/public/css/insert_update.css
@@ -55,3 +55,26 @@ form {
 	border: 1px solid #105319cd;
 	transition: 0.5s;
 }
+
+.div_span {
+	text-align: center;
+	margin-bottom: 35px;
+}
+span {
+	font-size: 130%;
+	letter-spacing: 1px;
+}
+.succesfull_span {
+	color: #093a0fcd;
+}
+.error_span {
+	color: darkred;
+}
+
+@media (max-width: 1150px) {
+	form {
+		margin-top: 40px;
+		grid-template-columns: 1fr;
+		row-gap: 80px;
+	}
+}
