--- a/public/css/update.css
+++ b/public/css/update.css
@@ -18,17 +18,9 @@ form {
 	margin: 0;
 	width: 18%;
 }
-.div_span {
-	text-align: center;
-	margin-bottom: 35px;
-}
-span {
-	font-size: 130%;
-	letter-spacing: 1px;
-}
-.succesfull_span {
-	color: #093a0fcd;
-}
-.error_span {
-	color: darkred;
+
+@media (max-width: 900px) {
+	.form_inputs input[type="submit"] {
+		width: 25%;
+	}
 }
